.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:14:08 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
g++ -o 317_add_copy_ctor main.o 
Info: Nothing to build for 317_add_copy_ctor
23:21:37 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
../main.cpp:22:1: error: no declaration matches ‘Vector::Vector(Vector&)’
   22 | Vector::Vector(Vector& s){
      | ^~~~~~
../main.cpp:5:7: note: candidates are: ‘constexpr Vector::Vector(const Vector&)’
    5 | class Vector{
      |       ^~~~~~
../main.cpp:17:1: note:                 ‘Vector::Vector(int)’
   17 | Vector::Vector(int s){
      | ^~~~~~
../main.cpp:5:7: note: ‘class Vector’ defined here
    5 | class Vector{
      |       ^~~~~~
23:22:11 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
../main.cpp: In copy constructor ‘Vector::Vector(Vector&)’:
../main.cpp:27:21: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
   27 |   buffer[i] = Elem[i];
      |                     ^
23:23:02 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
../main.cpp: In copy constructor ‘Vector::Vector(Vector&)’:
../main.cpp:27:22: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
   27 |   buffer[i] = *Elem[i];
      |                      ^
23:23:37 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
g++ -o 317_add_copy_ctor main.o 
23:24:26 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
g++ -o 317_add_copy_ctor main.o 
23:24:46 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
g++ -o 317_add_copy_ctor main.o 
23:26:25 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
g++ -o 317_add_copy_ctor main.o 
23:26:47 **** Incremental Build of configuration Debug for project 317_add_copy_ctor ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -Wno-attributes -o main.o ../main.cpp 
g++ -o 317_add_copy_ctor main.o 
